# surfacechat

./: .gitignore  Dockerfile.cpu  Dockerfile.fastchat  Dockerfile.llava  Dockerfile.sglang  Dockerfile.worker  README.md  image_config.yaml  pyproject.toml
src/surface_chat/: api_server.py  build_catalog.py  download_image_models.py  gutenberg.py  image_server.py  list_top_authors.py  llava_generator.py  model_worker.py  query_db.py  report_authors.py  webui.py
src/surface_chat/serve/: app_settings.py  controller_types.py  openai_types.py  types.py  worker_tracker.py
src/surface_chat/serve/routes/: controller.py  openai.py  sdxl.py
