[project]
name = "surface_chat"
description = "Serving packages for ML models"
version = "0.2.0"
authors = [
    {name = "Keith Stevens"},
]
requires-python = ">=3.9"
classifiers = [
    "Framework :: FastChat",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bitsandbytes",
    "diffusers[torch]",
    "fastapi",
    "fschat[model_worker,webui]",
    "loguru",
    "protobuf",
    "pydantic",
    "pydantic-settings",
    "yaml-settings-pydantic",
    "scipy",
    "transformers",
    "tqdm",
    "uvicorn",
]

[project.optional-dependencies]
vllm = [
    "vllm",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
