[project]
name = "surface_chat"
description = "Serving packages for ML models"
version = "0.4.1"
authors = [
    {name = "Keith Stevens"},
]
requires-python = ">=3.9"
classifiers = [
    "Framework :: FastChat",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "llava @ git+https://github.com/haotian-liu/LLaVA",
    "bitsandbytes==0.41.0",
    "diffusers[torch]",
    "fastapi",
    "loguru",
    "protobuf",
    "pydantic<2,>=1",
    "python-dotenv",
    "pyyaml",
    "scipy",
    "tqdm",
    "transformers>=4.31.0",
    "uvicorn",
]

[project.optional-dependencies]
vllm = [
    "vllm",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
